[GStreamer][MediaStream] Deadlock between capture source and mediastreamsrc element on WebProcess main thread https://bugs.webkit.org/show_bug.cgi?id=258349

Reviewed by Xabier Rodriguez-Calvar.

The mediastream src element now emits a single non-empty stream collection when associating with its
MediaStream tracks. Doing so while in the process of pushing buffers downstream was triggering a
deadlock with the capturer pipeline.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(WebKitMediaStreamObserver::activeStatusChanged):
(WebKitMediaStreamObserver::didRemoveTrack):
(webkitMediaStreamSrcChain):
(webkitMediaStreamSrcPostStreamCollection):
(webkitMediaStreamSrcEnsureStreamCollectionPosted):
(webkitMediaStreamSrcSetStream):

Canonical link: https://commits.webkit.org/265507@main